--- a/CRES/Testimonial2/Testimonial2.tex
+++ b/CRES/Testimonial2/Testimonial2.tex
@@ -49,44 +49,53 @@ exist which all but garuntee it. And the role of police in
 all these systems is to be the physical violence which makes
 the lines solid and meaningful.
 
-I think that these things are all good and important to learn,
-but they aren't really new to me personally. The things which
-have left the deepest impression on me is the fear Coates had
-when he spoke of being a Black boy in America, the way
-race becomes the governing force for real people. It is not
-precise nor is it an explanation of any kind. But it has something
-which I cannot help but value as much as the more technical
-explanations, it has a real human perspective.
+As mentioned during lecture, one of the main benefits of whiteness
+was the suppression and subjugation of minorities. Its not
+necessarily about killing the non-white, but about exercising
+power, and fetishing that exercise. That phenomenon is what
+I experienced in the first testimonial, I was watching the
+people around me be inducted into the worship and production
+of Race and legitimacy. Through that lens you can see how 
+Racism and Policing perpetuate themselves. The system of 
+policing cultivates the ideologies policing is meant to 
+enforce. And those who are fully inducted end up joining 
+the police. 
 
-The tragedy of Race isn't the particulars of its functioning
-but in the suffering and objectification it visits upon everyone
-who participates. 
+When I was in school I was watching how kids are taught
+about race, both officially and by culture at large. The
+Cis-het White men, were educated into embracing race. They
+ended up hating the non-straight, the non-white, the
+non-cis people of the world. Some of them even ended up
+believing that trans people shouldn't get healthcare even
+as their friends came out as trans.
+As children grew into adults they were seperated by ideology
+and social construction to more easily fit into society.
+They are made into vessels for the reproduction of Race
+and Policing as constructs.
 
-It is that kind of a perspective my first testimonial attempted
-to give. I am not a Black man and I have never been treated as
-anything other than White. However White people do not benefit
-from the existence of Race, they are made into tools, and 
-separated from some of the best, kindest, most interesting, and
-beautiful people in the world. I still believe in
-what I said in the first testimonial. Policing is a corrupting
-force for the White men who do it, they are convinced that the
-harm done to others is good, and then they are recruited to
-participate in that harm. This is a view and perspective which
-is perfectly consistent with my understanding of Race and policing
-in a more abstract sense. White people may hate minorities but
-that isn't because of something innate to White people. Systems
-which were shaped by the decisions of thousands guide them down
-old paths. 
+Each of these social constructions feed into each other.
+When one of those kids I knew who idolized the police
+saw police brutality, individualism would assuage his worries.
+Homophobia explained why the world didn't seem all that good
+despite all the people they idolized holding all the power,
+classism explained why some should have so much but others
+should have so little. Misogyny lets them square away the
+questions about how women are represented to them. 
 
-That is the experience of police I wanted to share, that of seeing
-kids you know grow up and become cruel, become the tools
-of the cruel and apathetic. I think that in light of what I
-know this story is the one I should share. I am not a scholar
-with new ideas, nor am I a marginalized voice with direct
-uncomfortable experiences with policing. And to those with
-both the experience of being on the other side of the law,
-or with far greater historical knowledge of these systems
-I only want to offer my own human perspective.
+To them, policing is about comfort and immersion, and that 
+comfort makes them into part of the system of policing. 
+They are alienated from everything and everybody they 
+would need to hate in order to become the arm of the law 
+and enforce the systems which shaped them. And the worrying 
+thing is how efficiently and pervasive the systems shaping 
+people's beliefs and thoughts are.
 
+I am lucky, to be viewing much of this from the outside.
+Much of my family is non-white, and a few are scholars
+of critical theory. Despite all that it was only the luck
+of randomly finding resources that presented critical
+ideas in a way I was receptive to. Because of this my 
+relationship to policing is mostly a relationship to the kids 
+who grew up to become Police.
 
 \end{document}
