--- a/CRES/Testimonial2/Testimonial2.tex
+++ b/CRES/Testimonial2/Testimonial2.tex
@@ -90,12 +90,14 @@ and enforce the systems which shaped them. And the worrying
 thing is how efficiently and pervasive the systems shaping 
 people's beliefs and thoughts are.
 
-I am lucky, to be viewing much of this from the outside.
+I am lucky, I was more like those kids than not. The difference
+was circumstantial.
 Much of my family is non-white, and a few are scholars
 of critical theory. Despite all that it was only the luck
 of randomly finding resources that presented critical
 ideas in a way I was receptive to. Because of this my 
 relationship to policing is mostly a relationship to the kids 
-who grew up to become Police.
+who grew up to become Police rather than idolizing the Police
+myself.
 
 \end{document}
