Day 1 + half of Day2 notes

--- a/ART20/template.tex
+++ b/ART20/template.tex
@@ -4,10 +4,8 @@
 \usepackage{enumitem}
 \usepackage[]{mdframed}
 \usepackage{tikz}
-\renewcommand{\familydefault}{\sfdefault}
-\usepackage{minibox}
 
-\title{\Huge{ECE 30}}
+\title{\Huge{Art 25}}
 \author{\huge{Elijah Hantman}}
 \date{}
 
