--- a/ART20/Action1/Action1.tex
+++ b/ART20/Action1/Action1.tex
@@ -15,6 +15,27 @@
 \maketitle
 \newpage
 
+{\large Gamespaces}
+\begin{itemize}
+    \item Discord Poker
+    \item Multiplayer Match Based Shooters
+    \item Tolgarth (Hema Larp)
+    \item Among Us?
+    \item RP servers
+    \item GTA Online
+\end{itemize}
+
+{\large Topics}
+\begin{itemize}
+    \item Minimum Wages
+    \item Cyberbullying
+    \item Voting
+    \item Gambling
+    \item Drunk Driving
+\end{itemize}
+
+\pagebreak
+
 
 
 \end{document}
