--- a/MATH181/template.tex
+++ b/MATH181/template.tex
@@ -4,6 +4,7 @@
 \usepackage{enumitem}
 \usepackage[]{mdframed}
 \usepackage{tikz}
+\renewcommand{\familydefault}{\sfdefault}
 
 \title{\Huge{Math 181}}
 \author{\huge{Elijah Hantman}}
