--- a/MATH181/Readings/kepler_conj_retro.tex
+++ b/MATH181/Readings/kepler_conj_retro.tex
@@ -14,6 +14,37 @@
 \maketitle
 \newpage
 
+{\large Author}
+\begin{itemize}
+    \item Thomas Hales
+    \item Date 9/22/2022
+    \item Mathematician at University of Pittsburgh
+    \item Well known
+    \item Algebra, Combinatorics, Geometry
+\end{itemize}
 
+{\large Abstract}
+\begin{itemize}
+    \item Retrospective on the 2014 effort for a formal
+        proof of the Kepler conjecture
+\end{itemize}
+
+{\large Intro}
+\begin{itemize}
+    \item Origins in atomic theory and packing of cannonballs
+    \item Kepler made the conjecture in his essay
+        On The Six Cornered Snowflake
+    \item Hilbert added it to his list of problems at the
+        International Congress in Paris 1900
+    \item Proved by Hales and Sam Ferguson in 1998,
+        however ended up stuck in review for 8 years
+        \begin{mdframed}
+            Based on a method proposed by
+            L\'aszl\'o Fejes T\'oth in 1953
+        \end{mdframed}
+    \item Formal efforts started by Hales to attempt and
+        get ahead of the work to standardize computer
+        assistance in proofs.
+\end{itemize}
 
 \end{document}
